--- a/vacation/app/templates/home.html
+++ b/vacation/app/templates/home.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" type="text/css" href="{% static 'homeStyle.css' %}"/>
 {% endblock css %}
 
-{% block conente %}
+{% block content %}
 <div>
     
 </div>
-{% endblock conente %}
+{% endblock content %}
 
