--- a/vacation/app/templates/timetable.html
+++ b/vacation/app/templates/timetable.html
@@ -144,7 +144,7 @@ canvas.addEventListener('touchstart', function (event) {
 
 canvas.addEventListener('touchend', function (event) {
     isUp = false
-    uniqueSectors = [...new Set(coloredSectors)]
+    uniqueSectors = [...new Set(coloredSectors)];
     uniqueSectors.forEach(function(index) {
       const sector = hour24[index];
       console.log('Colored sector:', sector);
@@ -216,24 +216,8 @@ function drawCircle(targets, first, last) {
 
 drawCircle(ctx, 0, 360, true);
 
-//추가 버튼시 POST
-const addButton = document.querySelector('#addButton');
-const detailInput = document.querySelector('#detailInput').value;
 
-const timeblock = () => {
-  fetch('/timeblock', {
-    method: 'POST',
-    body: JSON.stringify({timetable_pk:"{{timetable.pk}}",
-                          timeblock_start: min,
-                          timeblock_end: max,
-                          timeblock_detail: detailInput}),
-    headers: {
-      "Content-Type": "application/json",
-    },
-
-  })
-    .then((response) => response.json())
-}
-addButton.addEventListener("click", timeblock)
 </script>
+{%load static%}
+<script src={% static "./js/timetable.js"%}></script>
 {% endblock content %}
