--- a/vacation/app/static/baseStyle.css
+++ b/vacation/app/static/baseStyle.css
@@ -1,11 +1,32 @@
-body {
+@font-face {
+    font-family: 'TTCrownMychewR';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/TTCrownMychewR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h2 {
     margin: 0;
 }
 
-.main {
-    background-color: rgb(0,150,255);
-    margin-top: 10vh;
-}
-.pagetitle {
+.title {
+
+    font-family: 'TTCrownMychewR';
     text-align: center;
+    font-size: x-large;
+    font-weight: 700;
+
+}
+
+.main {
+    margin-top: 7vh;
+}
+
+.sunimg {
+    height: 80px;
+    width: 80px;
+}
+
+.content {
+    padding-top: 7vh;
 }
