--- a/vacation/app/templates/timetable.html
+++ b/vacation/app/templates/timetable.html
@@ -31,7 +31,7 @@
       <h2>계획표가 추가되었습니다!</h2>
       <img src=""/>
       <p>다른 친구들이 망친 {{ username }} 계획표도 보러갈까요~?</p>
-      <a href="" >👉 망친 계획표 보러가기</a>
+      <a href="http://127.0.0.1:8000/tablelist/{{ timetable.pk }}" >👉 망친 계획표들 보러가기</a>
       <p><a href="" >👉 내 계획표 만들러가기</a></p>
       <button class="close">❌</button>
     </div>
